--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <script>
 /* ================= CONFIG ================= */
-const GRAPHHOPPER_API_KEY = "PEGA_AQUI_TU_API_KEY";
+const GRAPHHOPPER_API_KEY = "5d8ba72b-ab2a-4545-a5a7-3f9596a55296";
 
 /* BLE UUIDs */
 const SERVICE_UUID = '4fafc201-1fb5-459e-8fcc-c5c9c331914b';
